# muxitude

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  package.json
.github/actions/wait-for-workflow/: action.yml
.github/workflows/: publish-crates.yml  publish-npm.yml  release-termux-aarch64.yml  rust-ci.yml
res/: section-mappings.txt
scripts/: build-remote.sh  npm-postinstall.js  push-tag.sh  run-rustci-remote.sh  run-rustci.sh  set-repo-vars.sh  setup-rust-scoop.md  sync-remote.sh
src/: main.rs
src/pkgdb/: mod.rs  parser.rs
src/ui/: actions.rs  core.rs  data.rs  help.rs  input.rs  mod.rs  options.rs  render.rs
